test/files/pos/java-import-static-from-subclass/Test.scala
// scalac: -Ypickle-java
class Test
