test/files/neg/partestInvalidFlag.scala
// scalac: -badCompilerFlag notAFlag -opt:badChoice
class C
